--- a/pmawas.html
+++ b/pmawas.html
@@ -338,7 +338,7 @@
   <!-- Footer Bottom -->
   <div class="footer-bottom">
     <p>© 2025 वडेगाव ग्रामपंचायत. सर्व हक्क राखीव.</p>
-    <p><!-- Design & Developed  --> by <strong>Universal Hope Foundation</strong></p>
+    <p><!-- Design & Developed  -->  <strong> </strong></p>
   </div>
 </footer>
 <!-- Footer Section End -->
